test/run-pass/include_middle_file.c

int h() { return 1; }

#include "include_file_f.h"

int main() {
	return f() - h();
}

