test/compile-fail/include_doesnt_exist.c

#include "this_file_does_not_exist.h"

int main() {
	return 0;
}

